@@ -235,7 +235,7 @@ void CvsPart::doneOperation()
 
 void CvsPart::slotCheckOut()
 {
-    // TODO
+    /// @todo
 }
 
 ///////////////////////////////////////////////////////////////////////////////
