@@ -257,7 +257,7 @@ bool ProjectManager::closeProject()
   unloadLanguageSupport();
   unloadProjectPart();
 
-  // TODO, if this fails, user is screwed
+  /// @todo, if this fails, user is screwed
   saveProjectFile();
 
   API::getInstance()->setProjectDom(0);
